# super_mario_py

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/performance/: measurement_results.md  measurement_scenarios.md
img/: 1upkinoko.dt3  Koopa_1.dt3  Koopa_2.dt3  Koopa_death.dt3  Koopa_reborn.dt3  block.dt3  block_sub.dt3  castle_1.dt3  castle_2.dt3  castle_4.dt3  castle_5.dt3  castle_flag.dt3  coin.dt3  crushed_block.dt3  explode.dt3  fireball.dt3  fireflower.dt3  goal_flag.dt3  goal_post_1.dt3  goal_post_2.dt3  goal_post_3.dt3  goal_post_4.dt3  goomba.dt3  goomba_death.dt3  ground.dt3  ground_sub.dt3  kinoko.dt3  mario_1.dt3  mario_2.dt3  mario_3.dt3  mario_big_1.dt3  mario_big_2.dt3  mario_big_3.dt3  mario_big_jump.dt3  mario_fire_1.dt3  mario_fire_2.dt3  mario_fire_3.dt3  mario_fire_jump.dt3  mario_fire_sit.dt3  mario_jump.dt3  (+12 more)
logs/: perf_before_mac.csv  perf_before_updates.csv  perf_before_win.csv
src/game/: app.py  main.py
src/game/core/: assets.py  settings.py  state.py
src/game/entities/: broken_block.py  castle_flag.py  coin.py  entity.py  fire.py  fireworks.py  goal_flag.py  goomba.py  koopa.py  mario.py  mushroom.py  star.py  static_coin.py
src/game/levels/: goal_manager.py  map.py  world1_1.py
src/game/systems/: hud.py  number.py  sound.py
src/tools/: metrics.py  plot_perf.py
src/tools/measurements/: measure_app.py  metrics.py
src/tools/measurements/analysis/: compare_perf.py  plot_perf.py  summarize_perf.py
